logs/django-youtrack.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dj_youtrack'...
Listing './lib/python3.5/site-packages/django_youtrack-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Compiling './lib/python3.5/site-packages/httplib2/__init__.py'...
***   File "./lib/python3.5/site-packages/httplib2/__init__.py", line 878
    print "connect: (%s, %s)" % (self.host, self.port)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/urllib2_file.py'...
***   File "./lib/python3.5/site-packages/urllib2_file.py", line 236
    raise TypeError, "not a valid non-string sequence or mapping object", tb
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/youtrack'...
Compiling './lib/python3.5/site-packages/youtrack/__init__.py'...
***   File "./lib/python3.5/site-packages/youtrack/__init__.py", line 464
    except YouTrackException, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/youtrack/connection.py'...
***   File "./lib/python3.5/site-packages/youtrack/connection.py", line 33
    except youtrack.YouTrackException, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/youtrack/importHelper.py'...
***   File "./lib/python3.5/site-packages/youtrack/importHelper.py", line 140
    except YouTrackException, e:
                            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
